--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 # Instap Box Python Dependencies
 # Add your dependencies here as needed
 
+# HTTP requests for API calls
+requests==2.31.0
+
 # Example dependencies (uncomment and modify as needed):
 # pymodbus==3.5.4
 # pyserial==3.5 
